--- a/information/index.html
+++ b/information/index.html
@@ -39,40 +39,83 @@
         </div>
     </nav>
 
-    <div class="competition-branch-page">
-        <div class="competition-branch-title-section">
-            <h5 class="competition-branch-title">Cabang Lomba</h5>
-            <div class="competition-branch-line-section">
-                <div class="line-competition-branch"></div>
+    <div class="main-info-page">
+            <div class="left-info-section">
+                <div class="left-title-info">
+                    <h2>BARATA MADYA XI SMANTA</h2>
+                    <h5>Dengan BARATA MADYA, Semangat Menggapai Asa, Membangun Generasi Cerdas Penerus Bangsa.</h5>
+                    <h6>by <span>Praja Wira SMANTA</span></h6>
+                </div>
+                <div class="tags-info">
+                    <h6 class="tag-info tags1">SMAN 01 Talun</h6>
+                    <h6 class="tag-info tags2">PMR</h6>
+                    <h6 class="tag-info tags3">Kompetisi</h6>
+                    <a href="#" class="share-info">
+                        <i class="bi bi-share-fill"></i>
+                    </a>
+                </div>
             </div>
-        </div>
-        <div class="daily-content">
-            <div class="daily-box" data-aos="fade-up" data-aos-delay="0">
-                <i class="bi bi-book"></i>
-                <h2>Belajar</h2>
+            <div class="right-info-section">
+                <div class="right-title-info">
+                    <h4>Lorem ipsum dolor sit amet.</h4>
+                </div>
+                <div class="right-date-info">
+                    <div class="date-info start">
+                        <h6>Mulai</h6>
+                        <h5>1 Mei 2222</h5>
+                    </div>
+                    <div class="date-info finish">
+                        <h6>Selesai</h6>
+                        <h5>2 Juni 2222</h5>
+                    </div>
+                </div>
+                <div class="time-container">
+                    <div class="container-segment">
+                        <div class="segment-title">Hours</div>
+                            <div class="segment">
+                                <div class="flip-card" data-hours-tens>
+                                <div class="top">2</div>
+                                <div class="bottom">2</div>
+                            </div>
+                            <div class="flip-card" data-hours-ones>
+                                <div class="top">4</div>
+                                <div class="bottom">4</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="container-segment">
+                        <div class="segment-title">Minutes</div>
+                            <div class="segment">
+                                <div class="flip-card" data-minutes-tens>
+                                    <div class="top">0</div>
+                                    <div class="bottom">0</div>
+                                </div>
+                                <div class="flip-card" data-minutes-ones>
+                                    <div class="top">0</div>
+                                    <div class="bottom">0</div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="container-segment">
+                            <div class="segment-title">Seconds</div>
+                            <div class="segment">
+                                <div class="flip-card" data-seconds-tens>
+                                <div class="top">0</div>
+                                <div class="bottom">0</div>
+                            </div>
+                            <div class="flip-card" data-seconds-ones>
+                                <div class="top">0</div>
+                                <div class="bottom">0</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
-            <div class="daily-box" data-aos="fade-up" data-aos-delay="50">
-                <i class="bi bi-camera"></i>
-                <h2>Fotografi</h2>
-            </div>
-            <div class="daily-box" data-aos="fade-up" data-aos-delay="100">
-                <i class="bi bi-controller"></i>
-                <h2>Gaming</h2>
-            </div>
-            <div class="daily-box" data-aos="fade-up" data-aos-delay="150">
-                <i class="bi bi-mic"></i>
-                <h2>Bernyanyi</h2>
-            </div>
-            <div class="daily-box" data-aos="fade-up" data-aos-delay="200">
-                <i class="bi bi-code-slash"></i>
-                <h2>Programming</h2>
-            </div>
-            <div class="daily-box" data-aos="fade-up" data-aos-delay="250">
-                <i class="bi bi-palette"></i>
-                <h2>Melukis</h2>
-            </div>
-        </div>
     </div>
+
+    <!-- <div class="competition-branch-page">
+        
+    </div> -->
 
     <div class="more-info-section">
         <div class="scroll text1">
@@ -122,9 +165,9 @@
                         <!-- <span>1 Mei - 4 Juni 2023</span> -->
                     </div>
                     <p>Pendaftaran dilakukan secara offline di SMAN 01 Talun dan melakukan pengiriman data tim serta bukti pembayaran secara online melalui google form.</p>
-                    <div class="bottom">
+                    <div class="details-date">
                         <!-- <a href="#">Read more</a> -->
-                        <i>1 Mei - 4 Juni 2023</i>
+                        <h6>1 Mei - 4 Juni 2023</i>
                     </div>
                 </section>
             </div>
@@ -136,9 +179,9 @@
                         <!-- <span>4 Juni 2023</span> -->
                     </div>
                     <p>Technical meeting dilakukan secara offline di tempat SMAN 01 Talun. Pada hari Minggu 4 Juni 2023 pukul 09.00 WIB sampai dengan selesai.</p>
-                    <div class="bottom">
+                    <div class="details-date">
                         <!-- <a href="#">Read more</a> -->
-                        <i>4 Juni 2023</i>
+                        <h6>4 Juni 2023</i>
                     </div>
                 </section>
             </div>
@@ -150,9 +193,9 @@
                         <!-- <span>25 Juni 2023</span> -->
                     </div>
                     <p>Kompetisi ini akan dilaksanakan secara offline di tempat SMAN 01 Talun. Pada hari Minggu 25 Juni 2023 pukul 07.00 WIB sampai dengan selesai.</p>
-                    <div class="bottom">
+                    <div class="details-date">
                         <!-- <a href="#">Read more</a> -->
-                        <i>25 Juni 2023</i>
+                        <h6>25 Juni 2023</i>
                     </div>
                 </section>
             </div>
@@ -205,7 +248,7 @@
         </div>
     </div>
 
-    <script src="./information.js"></script>
+    <script src="../information/information.js"></script>
 </body>
 
 </html>
