--- a/information/index.html
+++ b/information/index.html
@@ -56,22 +56,46 @@
                 </div>
             </div>
             <div class="right-info-section">
+                <div class="right-icon-section">
+                    <img src="../images/techny-time-management.png" alt="" class="right-icon">
+                </div>
                 <div class="right-title-info">
-                    <h4>Lorem ipsum dolor sit amet.</h4>
+                    <h4>PENDAFTARAN</h4>
                 </div>
                 <div class="right-date-info">
                     <div class="date-info start">
-                        <h6>Mulai</h6>
-                        <h5>1 Mei 2222</h5>
+                        <h6>Buka</h6>
+                        <h5>1 Mei 2023</h5>
+                    </div>
+                    <div class="date-info mid">
+                        <h5 class="month">MEI</h5>
+                        <h4>3</h4>
+                        <h6>RABU</h6>
                     </div>
                     <div class="date-info finish">
-                        <h6>Selesai</h6>
-                        <h5>2 Juni 2222</h5>
+                        <h6>Tutup</h6>
+                        <h5>2 Juni 2023</h5>
                     </div>
+                </div>
+                <div class="right-line-info">
+                    <div class="date-line"></div>
                 </div>
                 <div class="time-container">
                     <div class="container-segment">
-                        <div class="segment-title">Hours</div>
+                        <div class="segment-title">DAYS</div>
+                            <div class="segment">
+                                <div class="flip-card" data-hours-tens>
+                                <div class="top">3</div>
+                                <div class="bottom">3</div>
+                            </div>
+                            <div class="flip-card" data-hours-ones>
+                                <div class="top">2</div>
+                                <div class="bottom">2</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="container-segment">
+                        <div class="segment-title">HOURS</div>
                             <div class="segment">
                                 <div class="flip-card" data-hours-tens>
                                 <div class="top">2</div>
@@ -84,20 +108,20 @@
                         </div>
                     </div>
                     <div class="container-segment">
-                        <div class="segment-title">Minutes</div>
+                        <div class="segment-title">MINUTES</div>
                             <div class="segment">
                                 <div class="flip-card" data-minutes-tens>
-                                    <div class="top">0</div>
-                                    <div class="bottom">0</div>
-                                </div>
-                                <div class="flip-card" data-minutes-ones>
-                                    <div class="top">0</div>
-                                    <div class="bottom">0</div>
-                                </div>
+                                <div class="top">0</div>
+                                <div class="bottom">0</div>
+                            </div>
+                            <div class="flip-card" data-minutes-ones>
+                                <div class="top">0</div>
+                                <div class="bottom">0</div>
                             </div>
                         </div>
-                        <div class="container-segment">
-                            <div class="segment-title">Seconds</div>
+                    </div>
+                    <!-- <div class="container-segment">
+                        <div class="segment-title">Seconds</div>
                             <div class="segment">
                                 <div class="flip-card" data-seconds-tens>
                                 <div class="top">0</div>
@@ -108,9 +132,48 @@
                                 <div class="bottom">0</div>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
+                </div>
+                <div class="validation-btn-section">
+                    <button type="submit" class="validation-btn">DAFTAR</button>
                 </div>
             </div>
+    </div>
+
+    <div class="more-info-section">
+        <div class="scroll text1">
+                <div>
+                    Cabang <span>Lomba &#129067; </span> Cabang <span>Lomba &#129067; </span> Cabang <span>Lomba &#129067; </span> Cabang <span>Lomba &#129067; </span>
+                </div>
+                <div>
+                    Cabang <span>Lomba &#129067; </span> Cabang <span>Lomba &#129067; </span> Cabang <span>Lomba &#129067; </span> Cabang <span>Lomba &#129067; </span>
+                </div>
+                <div>
+                    Cabang <span>Lomba &#129067; </span> Cabang <span>Lomba &#129067; </span> Cabang <span>Lomba &#129067; </span> Cabang <span>Lomba &#129067; </span>
+                </div>
+                <div>
+                    Cabang <span>Lomba &#129067; </span> Cabang <span>Lomba &#129067; </span> Cabang <span>Lomba &#129067; </span> Cabang <span>Lomba &#129067; </span>
+                </div>
+                <div>
+                    Cabang <span>Lomba &#129067; </span> Cabang <span>Lomba &#129067; </span> Cabang <span>Lomba &#129067; </span> Cabang <span>Lomba &#129067; </span>
+                </div>
+                <div>
+                    Cabang <span>Lomba &#129067; </span> Cabang <span>Lomba &#129067; </span> Cabang <span>Lomba &#129067; </span> Cabang <span>Lomba &#129067; </span>
+                </div>
+                <div>
+                    Cabang <span>Lomba &#129067; </span> Cabang <span>Lomba &#129067; </span> Cabang <span>Lomba &#129067; </span> Cabang <span>Lomba &#129067; </span>
+                </div>
+                <div>
+                    Cabang <span>Lomba &#129067; </span> Cabang <span>Lomba &#129067; </span> Cabang <span>Lomba &#129067; </span> Cabang <span>Lomba &#129067; </span>
+                </div>
+                <div>
+                    Cabang <span>Lomba &#129067; </span> Cabang <span>Lomba &#129067; </span> Cabang <span>Lomba &#129067; </span> Cabang <span>Lomba &#129067; </span>
+                </div>
+                <div>
+                    Cabang <span>Lomba &#129067; </span> Cabang <span>Lomba &#129067; </span> Cabang <span>Lomba &#129067; </span> Cabang <span>Lomba &#129067; </span>
+                </div>
+            </div>
+        </div>
     </div>
 
     <!-- <div class="competition-branch-page">
@@ -205,7 +268,7 @@
     <div class="footer-page">
         <div class="footer-top-section">
             <a href="../" class="footer-logo-main">
-                <img src="./images/Logos-Event.png" class="footer-logo" alt="">
+                <img src="../images/Logos-Event.png" class="footer-logo" alt="">
                 <h4 class="footer-logo-title">BARATA MADYA XI SMANTA</h4>
             </a>
             <a href="../information/" class="footer-information">
