Completed navbar responsif and added share modal

--- a/index.html
+++ b/index.html
@@ -33,12 +33,18 @@
                 <h4 class="main-title-navbar">BARATA MADYA XI SMANTA</h4>
             </a>
         </div>
-        <a href="./information/" class="navbar-right-section">
-            <h4 class="main-option-navbar">Informasi Lomba</h4>
-        </a>
+        <div class="navbar-right-section navbar">
+            <a href="./information/" class="main-option-navbar">Informasi Lomba</a>
+            <button class="btnNon btnActive">Masuk</button>
+        </div>
         <div class="sign-btn-container">
             <!-- <a href="" class="sign-btn login-btn btn btnLogin-popup">Masuk</a> -->
             <button class="sign-btn login-btn btn btnLogin-popup">Masuk</button>
+        </div>
+        <div class="menu-icon">
+            <div class="line1"></div>
+            <div class="line2"></div>
+            <div class="line3"></div>
         </div>
     </nav>
 
