Fixed bug navbar and added documentation component

--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
 </head>
 
 <body>
+    <a href="#" class="scroll-top">
+        <i class='bx bxs-chevrons-up' ></i>
+    </a>
     <nav class="navbar-section container">
         <div class="navbar-left-section">
             <a href="./" class="navbar-left-link">
@@ -35,6 +38,7 @@
         </div>
         <div class="navbar-right-section navbar">
             <a href="./information/" class="main-option-navbar">Informasi Lomba</a>
+            <a href="./champion/" class="main-option-navbar-2">Pemenang</a>
             <button class="btnNon btnActive">Masuk</button>
         </div>
         <div class="sign-btn-container">
@@ -141,7 +145,7 @@
         </div>
         <div class="about-paragraph-section">
             <p class="about-paragraph">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Aenean euismod elementum nisi quis. Fusce ut placerat orci nulla pellentesque dignissim enim sit amet. Vel pretium lectus quam id leo in vitae turpis massa. Nisi quis eleifend quam adipiscing. Scelerisque mauris pellentesque pulvinar pellentesque habitant morbi tristique. Interdum velit laoreet id donec ultrices tincidunt. Varius vel pharetra vel turpis nunc. Fusce id velit ut tortor pretium viverra suspendisse potenti nullam. Leo vel orci porta non pulvinar neque laoreet suspendisse. Netus et malesuada fames ac turpis egestas integer eget. Sollicitudin tempor id eu nisl nunc mi ipsum faucibus vitae.
+                BARATA MADYA XI adalah salah satu kegiatan SMA Negeri 1 Talun melalui program kerja OSIS Masa Bakti 2022/2023 mengadakan ajang kompetisi untuk adik-adik PMR tingkat SMP/MTs dalam “Lomba Palang Merah Remaja Tingkat Madya ke XI” yang selanjutnya kami singkat menjadi BARATA MADYA XI. Kegiatan yang diselenggarakan oleh PMR Wira Unit SMAN 1 Talun ini, menjadi salah satu usaha nyata untuk mengaplikasian pelatihan materi-materi kepalangmerahan, dan lebih dari pada itu anggota PMR diharapkan dapat menjadi generasi muda yang cinta damai dan penyalur tugas-tugas kemanusiaan seperti yang telah terpatri dalam sapta prinsip kepalangmerahan.
             </p>
         </div>
     </div>
@@ -238,7 +242,42 @@
     </div>
 
     <div class="gallery-page container">
-        
+        <div>
+            <img src="./images/Documentation/documentation1.jpg" alt="">
+        </div>
+        <div class="v-stretch">
+            <img src="./images/Documentation/documentation2.jpg" alt="">
+        </div>
+        <div class="h-stretch">
+            <img src="./images//Documentation/documentation3.jpg" alt="">
+        </div>
+        <div>
+            <img src="./images/Documentation/documentation4.jpg" alt="">
+        </div>
+        <div>
+            <img src="./images/Documentation/documentation5.jpg" alt="">
+        </div>
+        <div class="v-stretch">
+            <img src="./images/Documentation/documentation6.jpg" alt="">
+        </div>
+        <div class="big-stretch">
+            <img src="./images/Documentation/documentation7.jpg" alt="">
+        </div>
+        <div>
+            <img src="./images/Documentation/documentation8.jpg" alt="">
+        </div>
+        <div class="h-stretch">
+            <img src="./images/Documentation/documentation9.jpg" alt="">
+        </div>
+        <div class="h-stretch">
+            <img src="./images/Documentation/documentation10.jpg" alt="">
+        </div>
+        <div>
+            <img src="./images/Documentation/documentation11.jpeg" alt="">
+        </div>
+        <div>
+            <img src="./images/Documentation/documentation12.jpeg" alt="">
+        </div>
     </div>
 
     <div class="more-info-section">
