--- a/information/index.html
+++ b/information/index.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="../information/information.css">
     <script src="https://kit.fontawesome.com/df1f690d1c.js" crossorigin="anonymous"></script>
 
-    <title>Informasi BARATA MADYA XI SMANTA</title>
+    <title>BARATA MADYA XI SMANTA: Informasi</title>
 
     <!-- Sweet alert 2 -->
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.7.3/dist/sweetalert2.all.min.js" integrity="sha256-t0FDfwj/WoMHIBbmFfuOtZv1wtA977QCfsFR3p1K4No=" crossorigin="anonymous"></script>
@@ -97,11 +97,11 @@
                 <div class="validate-info">
                     <div class="validate-upload-info validate-btn">
                         <i class="bi bi-cloud-arrow-up"></i>
-                        <h4 class="upload-title">Unggah File</h4>
+                        <a href="https://forms.gle/F4NpTpic9QtYRpws8" target="_blank" class="upload-title">Unggah File</a>
                     </div>
                     <div class="validate-upload-info validate-btn">
                         <i class="bi bi-cloud-arrow-down"></i>
-                        <h4 class="upload-title">Unduh File</h4>
+                        <a href="" class="download-title">Unduh File</a>
                     </div>
                 </div>
                 <div class="tags-info">
@@ -123,8 +123,8 @@
                         <a href="https://web.facebook.com/sharer.php?u=sciesixx.com" target="_blank"><i class="fab fa-facebook-f"></i></a>
                         <a href="https://twitter.com/intent/tweet?url=sciesixx.com&text=science six" target="_blank"><i class="fab fa-twitter"></i></a>
                         <a href="https://lineit.line.me/share/ui?url=sciesixx.com&text=Science Six" target="_blank"><i class="bi bi-line"></i></a>
-                        <a href="https://api.whatsapp.com/send?phone&text=Science Sixx" target="_blank"><i class="fab fa-whatsapp"></i></a>
-                        <a href="https://telegram.me/share/url?urlsciesixx.com&text=Science Sixx" target="_blank"><i class="fab fa-telegram-plane"></i></a>
+                        <a href="https://api.whatsapp.com/send?phone?url=sciesixx.com&text=Science Sixx" target="_blank"><i class="fab fa-whatsapp"></i></a>
+                        <a href="https://telegram.me/share/url?url=sciesixx.com&text=Science Sixx" target="_blank"><i class="fab fa-telegram-plane"></i></a>
                       </ul>
                       <p>Atau salin link</p>
                       <div class="field">
