Fixed bug and completed information component

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </div>
         <div class="navbar-right-section navbar">
             <a href="./information/" class="main-option-navbar">Informasi Lomba</a>
-            <a href="./champion/" class="main-option-navbar-2">Pemenang</a>
+            <!-- <a href="./champion/" class="main-option-navbar-2">Pemenang</a> -->
             <button class="btnNon btnActive">Masuk</button>
         </div>
         <div class="sign-btn-container">
@@ -83,7 +83,7 @@
                     </div>
                     <input type="submit" class="btn form-btn"></input>
                     <div class="login-register">
-                        <p>Belum memiliki akun? <a href="#" class="register-link">Daftar</a></p>
+                        <p>Belum memiliki akun? <a href="https://forms.gle/sXfAJJ5ud771Fod57" target="_blank" class="register-link">Daftar</a></p>
                     </div>
                 </form>
             </div>
