--- a/information/index.html
+++ b/information/index.html
@@ -36,6 +36,7 @@
         </div>
         <div class="navbar-right-section navbar">
             <a href="../" class="main-option-navbar">Beranda</a>
+            <!-- <a href="../champion/" class="main-option-navbar-2">Pemenang</a> -->
             <button class="btnNon btnActive">Masuk</button>
         </div>
         <div class="sign-btn-container">
@@ -50,13 +51,13 @@
     </nav>
 
      <!-- <div class="main-wrapper"> -->
-        <form class="wrapper">
+        <div class="wrapper">
             <div class="form-box login">
                 <span class="icon-close">
                     <i class="bi bi-x"></i>
                 </span>
                 <h2>Masuk</h2>
-                <div class="login-form">
+                <form class="login-form">
                     <div class="input-box">
                         <div class="icon">
                             <i class="bi bi-person"></i>
@@ -80,11 +81,11 @@
                     </div>
                     <input type="submit" class="btn form-btn"></input>
                     <div class="login-register">
-                        <p>Belum memiliki akun? <a href="#" class="register-link">Daftar</a></p>
+                        <p>Belum memiliki akun? <a href="https://forms.gle/sXfAJJ5ud771Fod57" target="_blank" class="register-link">Daftar</a></p>
                     </div>
-                </div>
+                </form>
             </div>
-        </form>
+        </div>
     <!-- </div> -->
 
     <div class="main-info-page">
@@ -148,9 +149,9 @@
                         <h5>1 Mei 2023</h5>
                     </div>
                     <div class="date-info mid">
-                        <h5 class="month">MEI</h5>
-                        <h4>3</h4>
-                        <h6>RABU</h6>
+                        <h5 class="month">JAN</h5>
+                        <h4 class="date-day">3</h4>
+                        <h6 class="day">RABU</h6>
                     </div>
                     <div class="date-info finish">
                         <h6>Tutup</h6>
