Fixed login popup and added multiple download function

--- a/information/index.html
+++ b/information/index.html
@@ -102,7 +102,7 @@
                     </div>
                     <div class="validate-upload-info validate-btn">
                         <i class="bi bi-cloud-arrow-down"></i>
-                        <a href="" class="download-title">Unduh File</a>
+                        <a href="" class="download-title download">Unduh File</a>
                     </div>
                 </div>
                 <div class="tags-info">
